--- a/styles/InfoBlock.module.css
+++ b/styles/InfoBlock.module.css
@@ -1,7 +1,11 @@
 .wrapper{
-    background: linear-gradient(180deg, #000000 0%, rgba(90, 91, 82, 0) 100%);
+    background-image: url(../public/img/Group\ 2.png);
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
     padding: 128px 0 135px 0;
 }
+
 .title{
     text-transform: uppercase;
     text-align: center;
@@ -16,9 +20,24 @@
 .white{
     color: #fff;
 }
-.card{
-    height: 430px;
+.card {
+    position: relative;
+    box-shadow: 0 4px 8px 0 rgba(146, 141, 141, 0.2);
+    transition: 0.3s;
     margin-top: 13px;
-    border-radius: 5px;
-    border: 2px solid rgba(188,208,229,0.5);
+    border-radius: 5px; 
+    color: #fff;
+}
+
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(255, 251, 251, 0.973);
+}
+
+
+.container {
+    padding: 2px 16px;
+}
+.img{
+    border-radius: 5px 5px 0 0;
 }
