--- a/styles/ItemList.module.scss
+++ b/styles/ItemList.module.scss
@@ -16,7 +16,7 @@
     height: 279px;
 }
 .img img{
-    border-radius: 38px 38px 0 0 ;
+    border-radius:100% ;
     width: 100%;
     height: 100%;
 }
@@ -31,3 +31,4 @@
     font-size: 23px;
     font-weight: bold;
 }
+// cards ===========
